# PaCS_Assignments

./: .gitignore  README.md
00_exercises_exam/: 00_conditionalVariable.cpp  01_exercise_dot_product.cpp  02_maxMin.cpp  05_prime.cpp  06_sorting.cpp  07_histogram.cpp  CMakeLists.txt
01_assignment/: .gitignore  CMakeLists.txt  eigen_matrix  eigen_matrix.cpp  matrix  matrix.cpp  matrix_stack.cpp
01_assignment/Assingment/: eigen_matrix_962449_960625.cpp  standard_matrix_962449_960625.cpp
01_assignment/data/: plot_data.py  real_eigen.txt  real_matrix.txt  sys_eigen.txt  sys_matrix.txt  user_eigen.txt  user_matrix.txt
02_assignment/Assingment/: eigen_matrix_962449_960625.cpp  standard_matrix_962449_960625.cpp
02_assignment/clock/: CMakeLists.txt  eigen_matrix_962449_960625.cpp  eigen_matrix_cmd.txt  standar_matrix_cmd.txt  standard_matrix_962449_960625.cpp
02_assignment/get_time_of_day/: CMakeLists.txt  standard_matrix_962449_960625.cpp
02_assignment/profiling_perf/: perf_eigen.txt  perf_matrix.txt
02_assignment/strace/: CMakeLists.txt  eigen_matrix_962449_960625.cpp  strace_eigen.txt  strace_matrix.txt
03_assignment/: CMakeLists.txt  pi_taylor_parallel.cc  pi_taylor_parallel_async.cc  pi_taylor_parallel_async_kahan.cc  pi_taylor_parallel_threads.cc  pi_taylor_parallel_threads_beta.cc  pi_taylor_sequential.cc
03_assignment/assignment/: pi_taylor_parallel_async.cc  pi_taylor_parallel_async_kahan.cc  pi_taylor_parallel_threads.cc  pi_taylor_sequential.cc
03_assignment/data/: Question2_sequential_mean_pi_timing.csv  Question3_Perf.txt  Question4_parallelOutputTime.txt  Question4_pi_taylor_parallel_threads_results.csv  Question4_sequential.txt  Question6Optional.txt  Question6_pi_taylor_parallel_async_means.csv  Question6_pi_tylor_parallel_async.csv  Question7Optional_output.txt  asyncOutput.txt  asyncOutput_threads.csv  pi_taylor_parallel_threads_means.csv  plot_data.py  sequentialOutput.txt
04_assignment/: smallpt_thread_pool.cpp
04_assignment/data/: Energyconsumption_JavierLaptop.txt  Energyconsumption_JavierLaptop_One_Region.txt  Energyconsumption_lab000.txt  outPutTimeExecutionWaitOptimized.txt  perf_stat.txt  plot_data.py  regions_vs_time.csv
04_assignment/include/: thread_pool.hpp  threadsafe_queue.hpp
05_assignment/: CMakeLists.txt
05_assignment/00_previous_Work/: example  example.cpp  executable  source.cpp
05_assignment/01_gaussianKernel/: gaussianFilter.cpp  gaussianKernel.cl
05_assignment/lab_content/: CMakeLists.txt  basic_environ.c  basic_environ_solved.c  commands.txt  environ_gaussian_filter.c  environ_gaussian_filter_cache.c  executable  executable_cache  executionTimeImage1.txt  executionTimeImage2.txt  executionTimeImage4.txt  executionTimeImage5.txt  executionTimeLargeImages.txt  executionTimeLargeImages_6.txt  executionTimeLargeImages_8.txt  kernel_gauss.cl  kernel_gaussian_filter.cl  kernel_gaussian_filter_cache.cl  results16x16.txt  results16x8.txt  results32x32.txt  results32x8.txt  results32x8_info.txt  results64x32.txt  results8x8.txt  resultsSigma1.txt  resultsSigma2.txt  resultsSigma3.txt  resultsSigma4.txt  resultsSigma5.txt
05_assignment/lab_content/data/: plot_data.py  size_throughput_gflops_kbw.csv
05_assignment/lab_content/results_part1/: executionTimeImage3.txt  executionTimeImage6.txt
05_assignment/lab_content/submit/: README.md
06_assignment/: CMakeLists.txt  environ_gaussian_filter.c
06_assignment_alvaro/: CMakeLists.txt  environ_gaussian_filter_metrics.c  environ_gaussian_filter_metrics_homogen.c  environ_gaussian_filter_metrics_non_heterogen.c  environ_gaussian_filter_metrics_prev.c  kernel_gaussian_filter.cl  metric_heterogen.txt  metric_non_heterogen.txt  metrics_heterogen.txt  metrics_heterogen_friday.txt  metrics_heterogen_javier.txt  metrics_heterogenous.txt  metrics_non_het_friday_gpu0.txt  metrics_non_het_friday_gpu1.txt  metrics_non_heterogen.txt  metrics_non_heterogenous.txt
06_assignment_javier/: .nfs0000010003a17aae0000470d  cmd_performance_metrics_2000Imgs.txt  cmd_performance_metrics_5000Imgs.txt  cmd_performance_metrics_5000Imgs_homogeneous.txt  environ_gaussian_filter.c  environ_gaussian_filter_metrics.c  environ_gaussian_filter_metrics_homogen.c  executable  executable_homogen  metricts  performance_metrics_2000Imgs.csv  performance_metrics_5000Imgs.csv  performance_metrics_5000Imgs.xlsx  performance_metrics_5000Imgs_homogeneous.csv  performance_metrics_5000Imgs_homogeneous.xlsx
